# Amdsnk87-Intelligence-Media-Analytics-IMA

./: README.md  app.py  download_nltk_data.py  pyproject.toml  railway.json  requirements.txt  setup.sh  web_scraper.py
attached_assets/: Pasted-Predictive-Trend-Analysis-Content-Volume-Prediction-ValueError-With-n-samples-1-test-size-0-3-an-1744183083071.txt  Pasted-Top-Keywords-No-news-content-data-available-for-keyword-extraction-LookupError--1744178114905.txt  Pasted-ValueError-Invalid-property-specified-for-object-of-type-plotly-graph-objs-Layout-titlefont-Did--1744186299741.txt  Pasted-ValueError-Invalid-property-specified-for-object-of-type-plotly-graph-objs-scatter-marker-ColorBar--1744183172079.txt
components/: all_articles.py  dashboard.py  influencer_tracking.py  predictive_trends.py  search.py  sentiment.py  topics.py  trends.py
utils/: analysis.py  data_collection.py  data_loader.py  database.py  indonesian_llm.py  influencer_analytics.py  predictive_analysis.py  predictive_analytics.py  visualization.py
